cmake_minimum_required(VERSION 3.16)
project(chip-8)
set(CMAKE_BUILD_TYPE Debug)
set(CMAKE_CXX_FLAGS "-fsanitize=address,undefined")

add_definitions(-DCH8_EXAMPLE_ROMS_DIR=\"${CMAKE_SOURCE_DIR}/assets/roms/\")
add_definitions(-DCH8_LOGS_DIR=\"${CMAKE_SOURCE_DIR}/logs/\")

add_subdirectory(app)
add_subdirectory(core)
add_subdirectory(ui)
add_subdirectory(graphics)
add_subdirectory(io)
add_subdirectory(audio)
add_subdirectory(external/events)
add_subdirectory(external/logger)
